--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
         <maven.jxr.plugin.version>2.3</maven.jxr.plugin.version>
 		<maven.checkstyle.plugin.version>2.13</maven.checkstyle.plugin.version>
         <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
-        <maven.coveralls.plugin.version>3.0.1</maven.coveralls.plugin.version>
+        <maven.coveralls.plugin.version>3.1.0-SNAPSHOT</maven.coveralls.plugin.version>
         <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
         <maven.jacoco.plugin.version>0.7.2.201409121644</maven.jacoco.plugin.version>
         <maven.site.plugin.version>3.4.1-SNAPSHOT</maven.site.plugin.version>
@@ -289,6 +289,15 @@
 			</snapshots>
         </repository>
     </repositories>
+    <pluginRepositories>
+		<pluginRepository>
+			<id>sonatype-snapshot</id>
+            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+    </pluginRepositories>
 
     <dependencies>
         <dependency>
@@ -684,13 +693,14 @@
             </properties>
             <build>
                 <plugins>
-					<!--plugin>
+					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
 						<version>${maven.jacoco.plugin.version}</version>
 						<executions>
 							<execution>
 								<id>pre-unit-test</id>
+								<phase>test-compile</phase>
 								<goals>
 									<goal>prepare-agent</goal>
 								</goals>
@@ -733,7 +743,7 @@
 								</configuration>
 							</execution>
 						</executions>
-					</plugin-->
+					</plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
@@ -741,7 +751,7 @@
                         <executions>
 							<execution>
 								<id>functional-tests</id>
-								<phase>test</phase>
+								<phase>integration-test</phase>
 								<goals>
 									<goal>integration-test</goal>
 								</goals>
@@ -756,7 +766,7 @@
                         </executions>
                         <configuration>
 							<!--argLine>${failsafeArgLine}</argLine-->
-							<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+							<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m ${failsafeArgLine}</argLine>
                             <useManifestOnlyJar>false</useManifestOnlyJar>
                             <useSystemClassLoader>true</useSystemClassLoader>
                             <groups>com.nemesis.platform.util.test.IntegrationTest</groups>
