--- a/pom.xml
+++ b/pom.xml
@@ -710,17 +710,6 @@
 								</configuration>
 							</execution>
 							<execution>
-								<id>post-unit-test</id>
-								<phase>test</phase>
-								<goals>
-									<goal>report</goal>
-								</goals>
-								<configuration>
-									<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-									<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-								</configuration>
-							</execution>
-							<execution>
 								<id>pre-integration-test</id>
 								<phase>pre-integration-test</phase>
 								<goals>
@@ -732,14 +721,32 @@
 								</configuration>
 							</execution>
 							<execution>
+								<id>merge-execs</id>
+								<phase>post-integration-test</phase>
+								<goals>
+									<goal>merge</goal>
+								</goals>
+								<configuration>
+									<fileSets>
+										<fileSet>
+											<directory>${project.build.directory}/coverage-reports/</directory>
+											<includes>
+												<include>*.exec</include>
+											</includes>
+										</fileSet>
+									</fileSets>
+									<destFile>${project.build.directory}/coverage-reports/merged.exec</destFile>
+								</configuration>
+							</execution>
+							<execution>
 								<id>post-integration-test</id>
 								<phase>post-integration-test</phase>
 								<goals>
 									<goal>report</goal>
 								</goals>
 								<configuration>
-									<dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
-									<outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+									<dataFile>${project.build.directory}/coverage-reports/merged.exec</dataFile>
+									<outputDirectory>${project.reporting.outputDirectory}/merged</outputDirectory>
 								</configuration>
 							</execution>
 						</executions>
