--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
     </distributionManagement>
 
     <properties>
-		<asciidoctor.version>1.5.0</asciidoctor.version>
+		<asciidoctor.version>1.5.3-SNAPSHOT</asciidoctor.version>
 		<asm.version>4.1</asm.version>
 		<atmosphere.version>2.2.0</atmosphere.version>
 		<cglib.version>3.1</cglib.version>
@@ -422,6 +422,9 @@
 						<merge>true</merge>
 						<path>${project.distributionManagement.site.url}</path> <!-- This should allow multimodules to have friendly urls -->
 						<!--topSiteURL></topSiteURL--> <!-- try this also -->
+						<attributes>
+							<generated>${basedir}/src/site/asciidoc/generated</generated>
+						</attributes>
 					</configuration>
 					<dependencies>
 						<dependency>
@@ -793,6 +796,7 @@
                             </includes>
                             <systemPropertyVariables>
 								<spring.profiles.active>test</spring.profiles.active>
+								<org.springframework.restdocs.outputDir>${basedir}/src/site/asciidoc/generated</org.springframework.restdocs.outputDir>
 							</systemPropertyVariables>
                         </configuration>
                     </plugin>
