--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,7 @@
 		<lucene.version>4.1.0</lucene.version>
         <maven.compile.source>1.7</maven.compile.source>
         <maven.compile.target>1.7</maven.compile.target>
+        <maven.archetype.plugin.version>2.2</maven.archetype.plugin.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.15</maven.surefire.plugin.version>
         <maven.jxr.plugin.version>2.3</maven.jxr.plugin.version>
