--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
 		<lucene.version>4.1.0</lucene.version>
         <maven.compile.source>1.7</maven.compile.source>
         <maven.compile.target>1.7</maven.compile.target>
-        <maven.archetype.plugin.version>2.2</maven.archetype.plugin.version>
+        <maven.archetype.plugin.version>2.3-SNAPSHOT</maven.archetype.plugin.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.15</maven.surefire.plugin.version>
         <maven.jxr.plugin.version>2.3</maven.jxr.plugin.version>
@@ -288,6 +288,13 @@
             <snapshots><enabled>true</enabled></snapshots>
             <releases><enabled>false</enabled></releases>
         </repository>
+		<repository>
+			<id>jboss-3rd-party-releases</id>
+			<name>We need this only for drools-jsr</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
+			<snapshots><enabled>false</enabled></snapshots>
+            <releases><enabled>true</enabled></releases>
+		</repository>
     </repositories>
     <pluginRepositories>
 		<pluginRepository>
