--- a/pom.xml
+++ b/pom.xml
@@ -199,45 +199,38 @@
         <jsoup.version>1.8.3</jsoup.version>
         <jetty.version>9.3.6.v20151106</jetty.version>
         <jedis.version>2.9.0</jedis.version>
-        <maven.archetype.plugin.version>2.4</maven.archetype.plugin.version>
+        <maven-archetype-plugin.version>2.4</maven-archetype-plugin.version>
         <maven.filtering.version>1.3</maven.filtering.version>
-        <maven.war.plugin.version>2.4</maven.war.plugin.version>
-        <maven.surefire.plugin.version>2.19</maven.surefire.plugin.version>
-        <maven.javadoc.plugin.version>2.10.3</maven.javadoc.plugin.version>
-        <maven.jxr.plugin.version>2.3</maven.jxr.plugin.version>
-        <maven.checkstyle.plugin.skip>false</maven.checkstyle.plugin.skip>
-        <maven.failsafe.plugin.skip>false</maven.failsafe.plugin.skip>
-        <maven.checkstyle.plugin.version>2.15</maven.checkstyle.plugin.version>
-        <maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
-        <maven.coveralls.plugin.version>3.1.0</maven.coveralls.plugin.version>
-        <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
-        <maven.jacoco.plugin.version>0.7.5.201505241946</maven.jacoco.plugin.version>
-        <maven.site.plugin.version>3.6</maven.site.plugin.version>
-        <maven.failsafe.plugin.version>2.19</maven.failsafe.plugin.version>
-        <maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
-        <maven.remote.resources.plugin.version>1.4</maven.remote.resources.plugin.version>
-        <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
-        <maven.plugin.log4j.version>1.0.1</maven.plugin.log4j.version>
-        <maven.plugin.plugin.version>3.4</maven.plugin.plugin.version>
-        <maven.project.info.reports.plugin>2.7</maven.project.info.reports.plugin>
-        <maven.appassembler.plugin.version>1.8</maven.appassembler.plugin.version>
-        <maven.changes.plugin.version>2.9</maven.changes.plugin.version>
-        <maven.findbugs.plugin.skip>false</maven.findbugs.plugin.skip>
-        <maven.findbugs.plugin.version>3.0.1</maven.findbugs.plugin.version>
-        <maven.pmd.plugin.version>3.6</maven.pmd.plugin.version>
-        <maven.pmd.plugin.skip>false</maven.pmd.plugin.skip>
-        <maven.rat.plugin.skip>false</maven.rat.plugin.skip>
-        <maven.compiler.test.compile.skip>false</maven.compiler.test.compile.skip>
-        <maven.rat.version.plugin>0.11</maven.rat.version.plugin>
+        <maven-war-plugin.version>2.4</maven-war-plugin.version>
+        <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
+        <maven-checkstyle-plugin.version>2.15</maven-checkstyle-plugin.version>
+        <maven-checkstyle-plugin.skip>false</maven-checkstyle-plugin.skip>
+        <maven-failsafe-plugin.skip>false</maven-failsafe-plugin.skip>
+        <maven-coveralls-plugin.version>3.1.0</maven-coveralls-plugin.version>
+        <maven-jacoco-plugin.version>0.7.5.201505241946</maven-jacoco-plugin.version>
+        <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
+        <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-plugin-log4j.version>1.0.1</maven-plugin-log4j.version>
+        <maven-plugin-plugin.version>3.4</maven-plugin-plugin.version>
+        <maven-project-info-reports.plugin>2.7</maven-project-info-reports.plugin>
+        <maven-appassembler-plugin.version>1.8</maven-appassembler-plugin.version>
+        <maven-changes-plugin.version>2.9</maven-changes-plugin.version>
+        <maven-findbugs-plugin.version>3.0.1</maven-findbugs-plugin.version>
+        <maven-findbugs-plugin.skip>false</maven-findbugs-plugin.skip>
+        <maven-pmd-plugin.version>3.6</maven-pmd-plugin.version>
+        <maven-pmd-plugin.skip>false</maven-pmd-plugin.skip>
+        <maven-rat-plugin.version>0.11</maven-rat-plugin.version>
+        <maven-rat-plugin.skip>false</maven-rat-plugin.skip>
+        <maven-compiler-test-compile.skip>false</maven-compiler-test-compile.skip>
         <maven.extraenforcer.version>1.0-beta-2</maven.extraenforcer.version>
         <maven.cargo.plugin>1.4.3</maven.cargo.plugin>
         <maven.tomcat7.plugin>2.2</maven.tomcat7.plugin>
-        <maven.build.helper.plugin.version>1.8</maven.build.helper.plugin.version>
-        <maven.plexus.plugin.version>1.5.5</maven.plexus.plugin.version>
-        <maven.jasmine.plugin.version>1.3.1.5</maven.jasmine.plugin.version>
-        <maven.plugin.api.version>3.2.2</maven.plugin.api.version>
-        <maven.resource.plugin.version>2.7</maven.resource.plugin.version>
-        <maven.plugin.annotations.version>3.3</maven.plugin.annotations.version>
+        <maven-build-helper-plugin.version>1.8</maven-build-helper-plugin.version>
+        <maven-plexus-plugin.version>1.5.5</maven-plexus-plugin.version>
+        <maven-jasmine-plugin.version>1.3.1.5</maven-jasmine-plugin.version>
+        <maven-plugin-api.version>3.2.2</maven-plugin-api.version>
+        <maven-plugin-annotations.version>3.3</maven-plugin-annotations.version>
         <nemesis.version>1.5.0.BUILD-SNAPSHOT</nemesis.version>
         <opencmis.version>1.0.0</opencmis.version>
         <olingo-odata2.version>2.0.5</olingo-odata2.version>
@@ -1468,7 +1461,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven.compiler.plugin.version}</version>
+                    <version>${maven-compiler-plugin.version}</version>
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
@@ -1483,7 +1476,7 @@
                                 <goal>testCompile</goal>
                             </goals>
                             <configuration>
-                                <skip>${maven.compiler.test.compile.skip}</skip>
+                                <skip>${maven-compiler-test-compile.skip}</skip>
                             </configuration>
                         </execution>
                     </executions>
@@ -1491,7 +1484,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>${maven.site.plugin.version}</version>
+                    <version>${maven-site-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>attach-descriptor</id>
@@ -1567,7 +1560,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>${maven.release.plugin.version}</version>
+                    <version>${maven-release-plugin.version}</version>
                     <configuration>
                         <releaseProfiles>apache-release</releaseProfiles>
                         <useReleaseProfile>false</useReleaseProfile>
@@ -1579,9 +1572,9 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>${maven.checkstyle.plugin.version}</version>
+                    <version>${maven-checkstyle-plugin.version}</version>
                     <configuration>
-                        <skip>${maven.checkstyle.plugin.skip}</skip>
+                        <skip>${maven-checkstyle-plugin.skip}</skip>
                         <configLocation>src/main/resources/nemesis-checkstyle.xml</configLocation>
                         <headerLocation>src/main/resources/nemesis-header.txt</headerLocation>
                         <sourceDirectory>src/main/java</sourceDirectory>
@@ -1604,7 +1597,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-remote-resources-plugin</artifactId>
-                <version>${maven.remote.resources.plugin.version}</version>
+                <version>${maven-remote-resources-plugin.version}</version>
                 <configuration>
                     <skip>${maven.remote.resources.plugin.skip}</skip>
                 </configuration>
@@ -1627,7 +1620,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.plugin.version}</version>
+                <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <skip>${maven.surefire.plugin.skip}</skip>
                     <argLine>${surefireArgLine}</argLine>
@@ -1646,7 +1639,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>${maven.jar.plugin.version}</version>
+                <version>${maven-jar-plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -1665,7 +1658,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${maven.checkstyle.plugin.version}</version>
+                <version>${maven-checkstyle-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>checkstyle-check</id>
@@ -1679,9 +1672,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>${maven.pmd.plugin.version}</version>
+                <version>${maven-pmd-plugin.version}</version>
                 <configuration>
-                    <skip>${maven.pmd.plugin.skip}</skip>
+                    <skip>${maven-pmd-plugin.skip}</skip>
                     <targetJdk>${maven.compiler.source}</targetJdk>
                     <linkXRef>false</linkXRef>
                     <printFailingErrors>true</printFailingErrors>
@@ -1707,9 +1700,9 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>${maven.findbugs.plugin.version}</version>
+                <version>${maven-findbugs-plugin.version}</version>
                 <configuration>
-                    <skip>${maven.findbugs.plugin.skip}</skip>
+                    <skip>${maven-findbugs-plugin.skip}</skip>
                 </configuration>
                 <executions>
                     <execution>
@@ -1724,7 +1717,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin.version}</version>
+                <version>${maven-javadoc-plugin.version}</version>
                 <configuration>
                     <fixTags>author,since,param,return,throws,link</fixTags>
                     <fixFieldComment>false</fixFieldComment>
@@ -1736,7 +1729,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>${maven.enforcer.plugin.version}</version>
+                <version>${maven-enforcer-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>enforce-bytecode-version</id>
@@ -1774,7 +1767,7 @@
             <plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
-                <version>${maven.rat.version.plugin}</version>
+                <version>${maven-rat-plugin.version}</version>
                 <!-- xerces is already removed in doxia 1.7, so this exclusion may be removed when doxia 1.7 is released. -->
                 <dependencies>
                     <dependency>
@@ -1798,7 +1791,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <skip>${maven.rat.plugin.skip}</skip>
+                    <skip>${maven-rat-plugin.skip}</skip>
                     <excludeSubProjects>false</excludeSubProjects>
                     <includes>
                         <include>**/*.java</include>
@@ -1850,7 +1843,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>${maven.project.info.reports.plugin}</version>
+                <version>${maven-project-info-reports.plugin}</version>
                 <configuration>
                     <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                     <!-- waiting for MPIR-267 -->
@@ -1884,13 +1877,13 @@
         <profile>
             <id>quick</id>
             <properties>
-                <maven.checkstyle.plugin.skip>true</maven.checkstyle.plugin.skip>
+                <maven-checkstyle-plugin.skip>true</maven-checkstyle-plugin.skip>
                 <maven.remote.resources.plugin.skip>true</maven.remote.resources.plugin.skip>
                 <maven.surefire.plugin.skip>true</maven.surefire.plugin.skip>
-                <maven.pmd.plugin.skip>true</maven.pmd.plugin.skip>
-                <maven.findbugs.plugin.skip>true</maven.findbugs.plugin.skip>
-                <maven.rat.plugin.skip>true</maven.rat.plugin.skip>
-                <!--maven.compiler.test.compile.skip>true</maven.compiler.test.compile.skip-->
+                <maven-pmd-plugin.skip>true</maven-pmd-plugin.skip>
+                <maven-findbugs-plugin.skip>true</maven-findbugs-plugin.skip>
+                <maven-rat-plugin.skip>true</maven-rat-plugin.skip>
+                <!--maven-compiler-test-compile.skip>true</maven-compiler-test-compile.skip-->
             </properties>
         </profile>
         <profile>
@@ -1912,7 +1905,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>${maven.jacoco.plugin.version}</version>
+                        <version>${maven-jacoco-plugin.version}</version>
                         <configuration>
                             <excludes>
                                 <exclude>**org.drools*</exclude>
@@ -1993,7 +1986,7 @@
                             </execution>
                         </executions>
                         <configuration>
-							<skip>${maven.failsafe.plugin.skip}</skip>
+							<skip>${maven-failsafe-plugin.skip}</skip>
                             <!--argLine>${failsafeArgLine}</argLine-->
                             <argLine>-Xms512m -Xmx1024m -XX:MaxMetaspaceSize=256m -Dfile.encoding=UTF-8</argLine>
                             <useManifestOnlyJar>false</useManifestOnlyJar>
