--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
         <javaparser.version>2.2.1</javaparser.version>
         <java-types.version>1.0.1</java-types.version>
         <jansi.version>1.12</jansi.version>
-        <jawr.version>3.10-PATCHED-SNAPSHOT</jawr.version>
+        <jawr.version>3.10.NEMESIS-VERSION</jawr.version>
         <jcip.version>1.0</jcip.version>
         <jest.version>0.1.7</jest.version>
         <jgravatar.version>1.1</jgravatar.version>
