--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,7 @@
         <maven-changes-plugin.version>2.9</maven-changes-plugin.version>
         <maven-findbugs-plugin.version>3.0.1</maven-findbugs-plugin.version>
         <maven-findbugs-plugin.skip>false</maven-findbugs-plugin.skip>
+        <maven-findbugs-plugin.skip>false</maven-findbugs-plugin.skip>
         <maven-pmd-plugin.version>3.6</maven-pmd-plugin.version>
         <maven-pmd-plugin.skip>false</maven-pmd-plugin.skip>
         <maven-rat-plugin.version>0.11</maven-rat-plugin.version>
@@ -1746,6 +1747,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc-plugin.version}</version>
                 <configuration>
+                    <skip>${maven-javadoc-plugin.skip}</skip>
                     <fixTags>author,since,param,return,throws,link</fixTags>
                     <fixFieldComment>false</fixFieldComment>
                     <defaultAuthor>Petar Tahchiev</defaultAuthor>
