--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,7 @@
         <maven-failsafe-plugin.skip>false</maven-failsafe-plugin.skip>
         <maven-coveralls-plugin.version>3.1.0</maven-coveralls-plugin.version>
         <maven-jacoco-plugin.version>0.7.5.201505241946</maven-jacoco-plugin.version>
+        <maven-javadoc-plugin.skip>false</maven-javadoc-plugin.skip>
         <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
         <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
