--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,7 @@
         <maven-failsafe-plugin.skip>false</maven-failsafe-plugin.skip>
         <maven-coveralls-plugin.version>3.1.0</maven-coveralls-plugin.version>
         <maven-jacoco-plugin.version>0.7.5.201505241946</maven-jacoco-plugin.version>
+        <maven-jarsigner-plugin.version>1.4</maven-jarsigner-plugin.version>
         <maven-javadoc-plugin.skip>false</maven-javadoc-plugin.skip>
         <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
         <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
@@ -1614,6 +1615,26 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jarsigner-plugin</artifactId>
+                    <version>${maven-jarsigner-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>sign</id>
+                            <!--phase>pre-deploy</phase-->
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <keystore>https://s3-eu-west-1.amazonaws.com/nemesis-software/nemesis/keystore.jks</keystore>
+                        <alias>1</alias>
+                        <storepass>password</storepass>
+                        <keypass>password</keypass>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-archetype-plugin</artifactId>
                     <version>${maven-archetype-plugin.version}</version>
                     <configuration>
@@ -1865,6 +1886,10 @@
                     </licenseFamilies>
                 </configuration>
             </plugin>
+            <!--plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jarsigner-plugin</artifactId>
+            </plugin-->
         </plugins>
     </build>
 
