--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
 
     <properties>
         <amazon.aws.sdk.version>1.11.9</amazon.aws.sdk.version>
-        <asciidoctor.version>1.5.4-NEMESIS-RELEASE</asciidoctor.version>
+        <asciidoctor.version>1.5.5</asciidoctor.version>
         <asciidoctorj.diagram.version>1.3.1</asciidoctorj.diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
