--- a/pom.xml
+++ b/pom.xml
@@ -283,7 +283,7 @@
         <thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
         <!--thymeleaf.version>3.0.1.RELEASE</thymeleaf.version>
         <thymeleaf-layout-dialect.version>2.0.1</thymeleaf-layout-dialect.version-->
-        <thymeleaf-jawr.version>2.0.1</thymeleaf-jawr.version>
+        <thymeleaf-jawr.version>2.0.2.NEMESIS-RELEASE</thymeleaf-jawr.version>
         <twilio.sdk.version>7.1.0</twilio.sdk.version>
         <wagon.version>2.9</wagon.version>
         <webjars-locator.version>0.31</webjars-locator.version>
